# mlehaptics

./: .gitignore  AI_GENERATED_DISCLAIMER.md  BACK_EMF_DURING_DRIVE_UPDATE.md  BILATERAL_PHASE_ERROR_ANALYSIS.md  BILATERAL_TIMING_ANALYSIS_20251201.md  BILATERAL_TIMING_ROOT_CAUSE_ANALYSIS.md  BLE_DIAGNOSTIC_STRATEGY.md  BUILD_COMMANDS.md  BUILD_CONFIGURATION.md  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PRIMER.md  CMakeLists.txt  CONTRIBUTING.md  ESP_IDF_CONSTRAINT.md  FUTURE_BLE_INTEGRATION_NOTES.md  GEMINI.md  INTEGRATION_COMPLETE.md  LICENSE  PHASE_4_COMPLETE_QUICKSTART.md  POWER_MANAGEMENT_ROADMAP.md  QUICK_START.md  README.md  SESSION_SUMMARY_BLE_BONDING_PAIRING.md  SESSION_SUMMARY_DIRECT_NOTIFICATION_AND_SHUTDOWN.md  SESSION_SUMMARY_MODE_SWITCH_REFACTOR.md  SESSION_SUMMARY_PHASE2_AND_BLE_PLANNING.md  SESSION_SUMMARY_SINGLE_DEVICE_DEMO_V2.md  SESSION_SUMMARY_UUID_SWITCHING_COMPLETE.md  SESSION_UUID_SWITCHING_IMPLEMENTATION.md  TECH_SPIKE_SINGLE_DEVICE_DRIFT_BASELINE.md  WATCHDOG_TIMEOUT_ANALYSIS.md  analyze_phase_relationship.py  analyze_phase_timing.awk  analyze_single_device_drift.sh  bilateral_phase_analysis_bug41_clamping.txt  bilateral_phase_analysis_bug42_test.txt  bilateral_phase_analysis_bug43_test.txt  bilateral_phase_analysis_corrected_0821.txt  (+26 more)
src/: CMakeLists.txt  backemf.c  backemf.h  battery_monitor.c  battery_monitor.h  ble_manager.c  ble_manager.h  ble_task.c  ble_task.h  button_task.c  button_task.h  cie_lut.h  command_protocol.c  command_protocol.h  espnow_transport.c  espnow_transport.h  firmware_version.h  idf_component.yml  (+25 more)
(+205 files in other folders)
